<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">すしログ</string>
    <string name="action_settings">設定</string>
    <string name="menu_name">メニュー</string>
    <string name="title_activity_add_sushi">寿司を追加</string>
    <string name="sushi_name">寿司の名前</string>
    <string name="sushi_price">寿司の値段 (円)</string>
    <string name="finish">完了</string>
    <string name="add_sushi_activity_name_error">名前入力してください.</string>
    <string name="add_sushi_activity_price_error">価格を入力してください.</string>
    <string name="popup_countable_sushi_model_menu_delete">削除する</string>
    <string name="popup_countable_sushi_menu_plus1">１つ増やす</string>
    <string name="popup_countable_sushi_menu_minus1">１つ減らす</string>
    <string name="title_activity_edit_note">メモの詳細設定</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">おあいそ</string>
    <string name="title_activity_license">License</string>
    <string name="title_create_note">メモの新規作成</string>

</resources>
