<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="in.tanjo.sushi.MainActivity"
        >

    <item
            android:id="@+id/action_menu"
            android:icon="@drawable/ic_more_vert_black_24dp"
            android:title="@string/menu_name"
            app:showAsAction="ifRoom"
            >

        <menu>
            <item
                    android:id="@+id/action_create_new_note"
                    android:orderInCategory="100"
                    android:title="@string/title_create_note"
                    />

            <!--
            <item
                    android:id="@+id/action_settings"
                    android:orderInCategory="100"
                    android:title="@string/action_settings"
                    app:showAsAction="never"
                    />
                    -->

            <item
                    android:id="@+id/action_note_edit"
                    android:orderInCategory="100"
                    android:title="@string/title_activity_edit_note"
                    app:showAsAction="never"
                    />

            <item
                    android:id="@+id/action_oaiso"
                    android:orderInCategory="100"
                    android:title="@string/title_activity_result"
                    app:showAsAction="never"
                    />

            <item
                    android:id="@+id/action_license"
                    android:orderInCategory="100"
                    android:title="@string/title_activity_license"
                    app:showAsAction="never"
                    />
        </menu>

    </item>
</menu>
